Created UI for form with select, auto-complete and datapicker

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,11 @@
   margin-right: auto;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Header styles */
 .header .brand-logo {
   position: static;
